<resources>
    <string name="app_name">Flavour Tester</string>
    <string name="title_activity_menu_lateral">Flavour Tester</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="escanear_producto">Escanear producto</string>
    <string name="saved_products">Productos guardados</string>
    <string name="taste">Probar</string>
    <string name="testingTitle">PROBANDO</string>
    <string name="stringCon">Conectando</string>
    <string name="stringStart">Iniciar prueba</string>
    <string name="stringTest">Prueba</string>
    <string name="stringEnd">Finalización</string>
</resources>
