<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Testing">

    <ProgressBar
        android:id="@+id/progressBarConectar"
        style="?android:attr/progressBarStyle"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTesting" />

    <TextView
        android:id="@+id/tvConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:text="@string/stringCon"
        android:textColor="@color/colorResaltado"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.382"
        app:layout_constraintStart_toEndOf="@+id/progressBarConectar"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTesting" />

    <ProgressBar
        android:id="@+id/progressBarStart"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarConectar" />

    <TextView
        android:id="@+id/tvEnd"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stringEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvPrueba"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvPrueba"
        app:layout_constraintTop_toBottomOf="@+id/tvPrueba"
        app:layout_constraintVertical_bias="0.58" />

    <TextView
        android:id="@+id/tvPrueba"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stringTest"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvStart"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvStart"
        app:layout_constraintTop_toBottomOf="@+id/tvStart"
        app:layout_constraintVertical_bias="0.347" />

    <TextView
        android:id="@+id/tvTitleTesting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/testingTitle"
        android:textColor="#891600"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:text="@string/stringStart"
        android:textSize="24sp"
        app:fontFamily="sans-serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvConnect"
        app:layout_constraintTop_toBottomOf="@+id/tvConnect" />

    <ProgressBar
        android:id="@+id/progressBarPrueba"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarStart" />

    <ProgressBar
        android:id="@+id/progressBarEnd"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvEnd"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarPrueba"
        app:layout_constraintVertical_bias="0.548" />

    <ImageView
        android:id="@+id/imageViewCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarConectar"
        app:layout_constraintEnd_toEndOf="@+id/progressBarConectar"
        app:layout_constraintStart_toStartOf="@+id/progressBarConectar"
        app:layout_constraintTop_toTopOf="@+id/progressBarConectar"
        app:srcCompat="@android:drawable/star_big_on" />

    <ImageView
        android:id="@+id/imageViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarStart"
        app:layout_constraintEnd_toEndOf="@+id/progressBarStart"
        app:layout_constraintStart_toStartOf="@+id/progressBarStart"
        app:layout_constraintTop_toTopOf="@+id/progressBarStart"
        app:srcCompat="@android:drawable/star_big_on" />

    <ImageView
        android:id="@+id/imageViewPrueba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarPrueba"
        app:layout_constraintEnd_toEndOf="@+id/progressBarPrueba"
        app:layout_constraintStart_toStartOf="@+id/progressBarPrueba"
        app:layout_constraintTop_toTopOf="@+id/progressBarPrueba"
        app:srcCompat="@android:drawable/star_big_on" />

    <ImageView
        android:id="@+id/imageViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/progressBarEnd"
        app:layout_constraintEnd_toEndOf="@+id/progressBarEnd"
        app:layout_constraintStart_toStartOf="@+id/progressBarEnd"
        app:layout_constraintTop_toTopOf="@+id/progressBarEnd"
        app:srcCompat="@android:drawable/star_big_on" />
</android.support.constraint.ConstraintLayout>